fix gap

--- a/src/components/LandingPage/Header/header.scss
+++ b/src/components/LandingPage/Header/header.scss
@@ -14,7 +14,7 @@ $titleLineHeightAdditionally: 1.6rem;
     max-width: 100vw;
     max-height: 100vh;
     box-sizing: border-box;
-    padding-top: 5%;
+    padding-top: 10rem;
     justify-content: center;
     gap: 3rem;
     color: $textColor;
