--- a/src/components/LandingPage/Main/main.scss
+++ b/src/components/LandingPage/Main/main.scss
@@ -19,13 +19,13 @@ $titleLineHeightAdditionally: 26.9px;
 $titleSizeText: 700;
 
 .main {
-    margin: 10% 0;
+    margin: 15rem 0;
     display: grid;
     max-width: 70vw;
     max-height: 100vh;
     box-sizing: border-box;
     margin-left: 15vw;
-    gap: 5rem;
+    gap: 10rem;
     color: $textColor;
     &__examplesOfWorksBlock {
         padding: 1% 0 1%;
